--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^3.4.0"
   }
